--- a/app/views/smartrent/admin/floor_plans/show.html.erb
+++ b/app/views/smartrent/admin/floor_plans/show.html.erb
@@ -2,7 +2,7 @@
   <div class="main">
     <p>
       <b>Property:</b>
-      <%= @admin_floor_plan.property.name rescue "Property not Present" %>
+      <%= @admin_floor_plan.property.name rescue "N/A" %>
     </p>
 
 
