--- a/app/views/smartrent/admin/properties/_form.html.erb
+++ b/app/views/smartrent/admin/properties/_form.html.erb
@@ -191,6 +191,14 @@
         </div>
       </div>
     </div>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :is_smartrent, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.check_box :is_smartrent %>
+        </div>
+      </div>
+    </div>
     <div class="form-group">
       <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-7">
