fixed property importer bug + code cleanup/spacing

--- a/app/assets/javascripts/smartrent/homes.js.erb
+++ b/app/assets/javascripts/smartrent/homes.js.erb
@@ -78,7 +78,7 @@ $(function() {
           totalPages = i + 1;
         });
       }
-      console.log('page ' + current + ' out of ' + totalPages + ' total pages.');
+      //console.log('page ' + current + ' out of ' + totalPages + ' total pages.');
       //if not on the first page, then display the "prev" button
       if (current != 1) {
         $('.prev').css('display', 'block');
