--- a/app/views/layouts/smartrent/admin.html.erb
+++ b/app/views/layouts/smartrent/admin.html.erb
@@ -50,9 +50,9 @@
   <%= yield %>
   
   <%= render "layouts/flash" %>
-  <%= 
-    #render "layouts/modal" 
-  %>
+  
+  <!-- bootstrap notify -->
+  <div id="notify" class='bottom-right'></div>
   
   <div id="spinner"> <%= image_tag("circle_loading.gif") %> Loading... </div>
   
