--- a/app/views/smartrent/admin/homes/show.html.erb
+++ b/app/views/smartrent/admin/homes/show.html.erb
@@ -48,6 +48,11 @@
         <% end %>
       </div>
     </div>
+    
+    <% if current_user.is_admin? %>
+      <%= link_to 'Edit', edit_admin_home_path(@home) %> |
+    <% end %>
+    <%= link_to 'Back', admin_homes_path %>
   </div>
 <% end %>
 
