--- a/app/views/smartrent/admin/more_homes/_form.html.erb
+++ b/app/views/smartrent/admin/more_homes/_form.html.erb
@@ -72,6 +72,7 @@
       <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-7">
         <%= f.submit :class => "btn btn-primary" %>
+        <%= link_to 'Cancel', admin_more_homes_path, :class => "btn btn-default" %>
       </div>
     </div>
   </fieldset>
