--- a/app/views/smartrent/admin/features/show.html.erb
+++ b/app/views/smartrent/admin/features/show.html.erb
@@ -1,9 +1,10 @@
 <% content_for(:ui_center) do %>
   <div class="main">
+    
+    <%= link_to '<< Back', admin_features_path, :class => "btn btn-default back" %>
     <% if current_user.is_admin? %>
-      <%= link_to 'Edit', edit_admin_feature_path(@admin_feature) %> |
+      <%= link_to 'Edit', edit_admin_feature_path(@admin_feature), :class => "btn btn-default" %>
     <% end %>
-    <%= link_to 'Back', admin_features_path %>
     
   </div>
 <% end %>
