--- a/app/views/smartrent/admin/floor_plan_images/_form.html.erb
+++ b/app/views/smartrent/admin/floor_plan_images/_form.html.erb
@@ -7,7 +7,7 @@
         <%= f.file_field :image %>
         
         <% if f.object.image && f.object.image.url %>
-          <br><img src="<%= f.object.image.url %>" width="100px" />
+          <br><img src="<%= f.object.image.url %>" width="160px" />
         <% end %>
       </div>
     </div>
@@ -27,6 +27,7 @@
       <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-7">
         <%= f.submit :class => "btn btn-primary" %>
+        <%= link_to 'Cancel', admin_floor_plan_images_path, :class => "btn btn-default" %>
       </div>
     </div>
   </fieldset>
