--- a/app/views/smartrent/admin/floor_plan_images/show.html.erb
+++ b/app/views/smartrent/admin/floor_plan_images/show.html.erb
@@ -13,11 +13,11 @@
       <b>Home:</b>
       <%= @floor_plan_image.more_home.name %>
     </p>
-
+    
+    <%= link_to '<< Back', admin_floor_plan_images_path, :class => "btn btn-default back" %>
     <% if current_user.is_admin? %>
-      <%= link_to 'Edit', edit_admin_floor_plan_image_path(@floor_plan_image) %> |
+      <%= link_to 'Edit', edit_admin_floor_plan_image_path(@floor_plan_image), :class => "btn btn-default" %>
     <% end %>
-    <%= link_to 'Back', admin_floor_plan_images_path %>
   </div>
 <% end %>
 
