--- a/app/views/smartrent/admin/homes/show.html.erb
+++ b/app/views/smartrent/admin/homes/show.html.erb
@@ -49,10 +49,10 @@
       </div>
     </div>
     
+    <%= link_to '<< Back', admin_homes_path, :class => "btn btn-default back" %>
     <% if current_user.is_admin? %>
-      <%= link_to 'Edit', edit_admin_home_path(@home) %> |
+      <%= link_to 'Edit', edit_admin_home_path(@home), :class => "btn btn-default" %>
     <% end %>
-    <%= link_to 'Back', admin_homes_path %>
   </div>
 <% end %>
 
