--- a/app/views/smartrent/admin/more_homes/show.html.erb
+++ b/app/views/smartrent/admin/more_homes/show.html.erb
@@ -29,11 +29,11 @@
       <b>Home:</b>
       <%= @more_home.home.title %>
     </p>
-
+    
+    <%= link_to '<< Back', admin_more_homes_path, :class => "btn btn-default back" %>
     <% if current_user.is_admin? %>
-      <%= link_to 'Edit', edit_admin_more_home_path(@more_home) %> |
+      <%= link_to 'Edit', edit_admin_more_home_path(@more_home), :class => "btn btn-default" %>
     <% end %>
-    <%= link_to 'Back', admin_more_homes_path %>
   </div>
 <% end %>
 
