--- a/app/views/smartrent/admin/properties/show.html.erb
+++ b/app/views/smartrent/admin/properties/show.html.erb
@@ -97,11 +97,11 @@
       <b>Status:</b>
       <%= @property.status %>
     </p>
-
+    
+    <%= link_to '<< Back', admin_properties_path, :class => "btn btn-default back" %>
     <% if current_user.is_admin? %>
-      <%= link_to 'Edit', edit_admin_property_path(@property) %> |
+      <%= link_to 'Edit', edit_admin_property_path(@property), :class => "btn btn-default" %>
     <% end %>
-    <%= link_to 'Back', admin_properties_path %>
   </div>
 <% end %>
 
