--- a/app/views/smartrent/admin/rewards/show.html.erb
+++ b/app/views/smartrent/admin/rewards/show.html.erb
@@ -12,8 +12,8 @@
   </div>
   <br />
   <br />
+  <%= link_to '<< Back', admin_rewards_path, :class => "btn btn-default back" %>
   <% if current_user.is_admin? %>
-    <%= link_to 'Edit', edit_admin_reward_path(@reward) %> |
+    <%= link_to 'Edit', edit_admin_reward_path(@reward), :class => "btn btn-default" %>
   <% end %>
-  <%= link_to 'Back', admin_rewards_path %>
 </div>
