--- a/app/views/smartrent/admin/settings/_form.html.erb
+++ b/app/views/smartrent/admin/settings/_form.html.erb
@@ -17,6 +17,7 @@
       <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-7">
         <%= f.submit :class => "btn btn-primary" %>
+        <%= link_to 'Cancel', admin_settings_path, :class => "btn btn-default" %>
       </div>
     </div>
   </fieldset>
