--- a/app/views/smartrent/contacts/show.html.erb
+++ b/app/views/smartrent/contacts/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= link_to '<< Back', contacts_path, :class => "btn btn-default back" %>
 <% if current_user.is_admin? %>
-  <%= link_to 'Edit', edit_contact_path(@contact) %> |
+  <%= link_to 'Edit', edit_contact_path(@contact), :class => "btn btn-default" %>
 <% end %>
-<%= link_to 'Back', contacts_path %>
+
