few enhancements for the smartrent front end: hide home's video link if blank, allow bozzuto homes to be ordered by position, fixed broken admin home details page

--- a/app/views/smartrent/admin/floor_plans/_form.html.erb
+++ b/app/views/smartrent/admin/floor_plans/_form.html.erb
@@ -58,8 +58,8 @@
     </div>
     <div class="form-group">
       <%= f.label :penthouse, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.check_box :penthouse %>
+      <div class="col-md-7" style="margin-top:5px;">
+        <%= f.check_box :penthouse %> Yes
       </div>
     </div>
     <div class="form-group">
