--- a/app/views/smartrent/admin/homes/_form.html.erb
+++ b/app/views/smartrent/admin/homes/_form.html.erb
@@ -1,122 +1,130 @@
 <%= form_for([:admin, @home], :html => {:class => "form-horizontal"}) do |f| %>
   <%= render "layouts/error_messages", :target => @home %>
   <fieldset>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :title, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_field :title, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :title, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :title, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :video_url, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.url_field :video_url, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :video_url, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.url_field :video_url, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :phone_number, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_field :phone_number, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :phone_number, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :phone_number, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :address, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_field :address, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :address, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :address, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :city, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_field :city, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :city, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :city, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :state, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_field :state, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :state, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :state, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :website, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.url_field :website, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :website, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.url_field :website, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :home_page_desc, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_field :home_page_desc, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :home_page_desc, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :home_page_desc, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :search_page_description, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_area :search_page_description, :class => "form-control", :rows => 8 %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :search_page_description, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_area :search_page_description, :class => "form-control", :rows => 8 %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :description, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_area :description, :class => "form-control", :rows => 8 %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :description, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_area :description, :class => "form-control", :rows => 8 %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :latitude, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_field :latitude, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :latitude, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :latitude, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :longitude, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.text_field :longitude, :class => "form-control" %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :longitude, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :longitude, :class => "form-control" %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
-    <div class="form-group">
-      <%= f.label :image, :class => "col-md-4 control-label" %>
-      <div class="col-md-7">
-        <%= f.file_field :image %>
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :image, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.file_field :image %>
         
-        <% if f.object.image && f.object.image.url %>
-          <br><img src="<%= f.object.image.url %>" width="160px" />
-        <% end %>
+          <% if f.object.image && f.object.image.url %>
+            <br><img src="<%= f.object.image.url %>" width="160px" />
+          <% end %>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="field">
+    <div class="field">
+      <div class="form-group">
+        <%= f.label :image_description, :class => "col-md-4 control-label" %>
+        <div class="col-md-7">
+          <%= f.text_field :image_description, :class => "form-control" %>
+        </div>
+      </div>
+    </div>
+  
     <div class="form-group">
-      <%= f.label :image_description, :class => "col-md-4 control-label" %>
+      <%= f.label :position, :class => "col-md-4 control-label" %>
       <div class="col-md-7">
-        <%= f.text_field :image_description, :class => "form-control" %>
+        <%= f.number_field :position, :class => "form-control" %>
       </div>
     </div>
-  </div>
+  
     <div class="form-group">
       <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-7">
