--- a/app/views/smartrent/admin/properties/_form.html.erb
+++ b/app/views/smartrent/admin/properties/_form.html.erb
@@ -114,8 +114,8 @@
     <div class="field">
       <div class="form-group">
         <%= f.label :studio, :class => "col-md-4 control-label" %>
-        <div class="col-md-7">
-          <%= f.check_box :studio %>
+        <div class="col-md-7" style="margin-top:5px;">
+          <%= f.check_box :studio %> Yes
         </div>
       </div>
     </div>
@@ -130,8 +130,8 @@
     <div class="field">
       <div class="form-group">
         <%= f.label :special_promotion, :class => "col-md-4 control-label" %>
-        <div class="col-md-7">
-          <%= f.check_box :special_promotion %>
+        <div class="col-md-7" style="margin-top:5px;">
+          <%= f.check_box :special_promotion %> Yes
         </div>
       </div>
     </div>
@@ -206,8 +206,8 @@
     <div class="field">
       <div class="form-group">
         <%= f.label :is_smartrent, :class => "col-md-4 control-label" %>
-        <div class="col-md-7">
-          <%= f.check_box :is_smartrent %>
+        <div class="col-md-7" style="margin-top:5px;">
+          <%= f.check_box :is_smartrent %> Yes
         </div>
       </div>
     </div>
