--- a/app/views/smartrent/admin/more_homes/_form.html.erb
+++ b/app/views/smartrent/admin/more_homes/_form.html.erb
@@ -36,8 +36,8 @@
     <div class="field">
       <div class="form-group">
         <%= f.label :featured, :class => "col-md-4 control-label" %>
-        <div class="col-md-7">
-          <%= f.check_box :featured %>
+        <div class="col-md-7" style="margin-top:5px;">
+          <%= f.check_box :featured %> Yes
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
       <div class="form-group">
         <%= f.label :home_id, :class => "col-md-4 control-label" %>
         <div class="col-md-7">
-          <%= f.collection_select :home_id, Smartrent::Home.order("title asc").all, :id, :title, {:include_blank => "--Select Home--"},{:class => "form-control"}  %>
+          <%= f.collection_select :home_id, Smartrent::Home.order("position asc").all, :id, :title, {:include_blank => "--Select Home--"},{:class => "form-control"}  %>
         </div>
       </div>
     </div>
@@ -66,6 +66,12 @@
             </div>
           <% end %>
         </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :position, :class => "col-md-4 control-label" %>
+      <div class="col-md-7">
+        <%= f.number_field :position, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group">
