--- a/app/views/smartrent/pages/_properties_slider.html.erb
+++ b/app/views/smartrent/pages/_properties_slider.html.erb
@@ -1,23 +1,27 @@
 <div id="slides">
   <div class="slides_container">
-      <% i = 0 %>
-      <% homes = Smartrent::Home.all %>
+    <% i = 0 %>
+    <% homes = Smartrent::Home.order('position asc').all %>
     <% homes.each do |home|%>
       <% if i%3 == 0 %>
-      <div class="threeWide">
+        <div class="threeWide">
       <% end %>
-        <div class="propertySlide">
-          <%= link_to home_path(home) do %>
-            <%= image_tag home.image(:home_page) %>
-            <div class="caption">
-              <strong><%= home.title %></strong><%= home.home_page_desc %>
-            </div>
-          <% end %>
-        </div>
-      <% i+=1 %>
-    <% if i%3 == 0 || i == homes.count %>
+      
+      <div class="propertySlide">
+        <%= link_to home_path(home) do %>
+          <%= image_tag home.image(:home_page) %>
+          <div class="caption">
+            <strong><%= home.title %></strong><%= home.home_page_desc %>
+          </div>
+        <% end %>
       </div>
-    <% end %>
+      
+      <% i+=1 %>
+      
+      <% if i%3 == 0 || i == homes.count %>
+        </div>
+      <% end %>
+      
     <% end %>
   </div>
 </div>
