xml import: populate the property features, penthouse and studio floorplans, fixed wrong filter on studio, price filter bug

--- a/app/views/smartrent/admin/floor_plans/_filter_form.html.erb
+++ b/app/views/smartrent/admin/floor_plans/_filter_form.html.erb
@@ -30,6 +30,12 @@
     </div>
     <div class="form-group">
       <label>
+        <%= check_box_tag :studio, true, params[:studio] %>
+        Studio
+      </label>
+    </div>
+    <div class="form-group">
+      <label>
         <%= check_box_tag :penthouse, true, params[:penthouse] %>
         Penthouse
       </label>
