--- a/app/views/smartrent/admin/floor_plans/_form.html.erb
+++ b/app/views/smartrent/admin/floor_plans/_form.html.erb
@@ -57,6 +57,12 @@
       </div>
     </div>
     <div class="form-group">
+      <%= f.label :studio, :class => "col-md-4 control-label" %>
+      <div class="col-md-7" style="margin-top:5px;">
+        <%= f.check_box :studio %> Yes
+      </div>
+    </div>
+    <div class="form-group">
       <%= f.label :penthouse, :class => "col-md-4 control-label" %>
       <div class="col-md-7" style="margin-top:5px;">
         <%= f.check_box :penthouse %> Yes
